# streambank-demo

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  docs.yml
api/: Dockerfile  index.html  main.py
api/core/: auth.py  config.py  database.py  exceptions.py  security.py
api/repositories/: analytics.py
api/routers/: analytics.py
api/schemas/: analytics.py
architecture/: index.html
backend/: Dockerfile  celerybeat-schedule
backend/config/: beat_schedule.py  celery.py  settings.py  urls.py
backend/scripts/: import_csv.py
backend/staticfiles/rest_framework/docs/js/: highlight.pack.js
backend/transactions/: admin.py  models.py  serializers.py  tasks.py  test_transactions.py  urls.py  utils.py  views.py
backend/transactions/migrations/: 0001_initial.py  0002_transaction_data.py  0003_alter_transaction_data.py
contributing/: index.html
data/: sample_transactions.csv
development/: index.html
docs/: api.md  architecture.md  contributing.md  development.md  getting-started.md  index.md
getting-started/: index.html
monitoring/: prometheus.yml
nginx/: nginx.conf
search/: search_index.json
sql_queries/sql/: cte_monthly_category_totals.sql  jsonb_select.sql  window_func_accumulate.sql
tests/: Dockerfile  pytest.ini
